Bug #1830797: Left-align lang strings
behatnotneeded

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -855,3 +855,7 @@ div.form-group .form-control-label {
     position: sticky;
     top: 200px;
 }
+
+a.online-users {
+    text-align: left;
+}
